# Talk

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: build-talk.yml  release-talk-tag.yml
contracts/local-capability/examples/: talk-invoke-request.json  talk-manifest.json
contracts/release/: manifest.schema.json  summary.schema.json
contracts/release/examples/: talk-release-manifest.json  talk-release-summary.json
crates/talk-audio/: Cargo.toml
crates/talk-audio/src/: lib.rs
crates/talk-audio/tests/: audio_contract.rs
crates/talk-client/: Cargo.toml
crates/talk-client/src/: correction.rs  lib.rs  streaming_asr.rs
crates/talk-client/tests/: client_contract.rs  correction_contract.rs  streaming_asr_contract.rs
crates/talk-core/: Cargo.toml
crates/talk-core/src/: lib.rs  speculative.rs
crates/talk-core/tests/: config_contract.rs  speculative_contract.rs  state_machine_contract.rs
crates/talk-daemon/: Cargo.toml
crates/talk-daemon/src/: main.rs
crates/talk-daemon/tests/: cli_contract.rs
crates/talk-desktop/: Cargo.toml
crates/talk-desktop/src/: lib.rs  main.rs  model_bootstrap.rs  product_payload.rs
crates/talk-desktop/tests/: desktop_contract.rs  model_bootstrap_contract.rs  product_payload_contract.rs
crates/talk-hotkey/: Cargo.toml
crates/talk-hotkey/src/: lib.rs
crates/talk-hotkey/tests/: hotkey_contract.rs
crates/talk-insert/: Cargo.toml
crates/talk-insert/src/: lib.rs  patch.rs
crates/talk-insert/tests/: insert_contract.rs  patch_contract.rs
crates/talk-runtime/: Cargo.toml
crates/talk-runtime/src/: credentials.rs  lib.rs  loom_config.rs  segmenter.rs  speculative.rs
crates/talk-runtime/tests/: runtime_contract.rs  segmenter_contract.rs  speculative_runtime_contract.rs
docs/: ASR_BENCHMARKING.md  LOCAL_FIRST_SPECULATIVE_DICTATION.md  LOCAL_SHERPA_MODELS.md  LOCAL_STREAMING_ASR_PROTOCOL.md  MERGE_INTO_HOOK_PLAN.md  TALK_DESIGN.md
docs/asr-benchmarks/: corpus-manifest.example.json  huihui-model-comparison.json  paraformer-bilingual-zh-en-huihui-nihaoya.json  zipformer-zh-en-punct-int8-480ms-huihui-nihaoya.json
docs/superpowers/plans/: 2026-07-04-talk-openless-typeless-shell.md  2026-07-08-talk-local-first-speculative-dictation.md  2026-07-09-talk-local-first-asr-roadmap.md  2026-07-09-talk-local-first-streaming-followup.md  2026-07-09-talk-local-streaming-asr-service.md  2026-07-09-talk-managed-local-asr-daemon.md  2026-07-09-talk-packaged-local-asr-service.md  2026-07-09-talk-sentence-level-correction-patches.md  2026-07-09-talk-sherpa-model-config-and-validation.md  2026-07-09-talk-sherpa-model-installer-release.md  2026-07-09-talk-sherpa-onnx-real-engine.md  2026-07-17-talk-five-mode-runtime-ui-followup.md  2026-07-17-talk-five-mode-text-lifecycle.md  2026-07-18-talk-five-mode-active-improvement-plan.md  2026-07-18-talk-independent-repository-migration.md  2026-07-19-talk-hud-lifecycle-and-current-focus-insertion.md  2026-07-19-talk-runtime-credential-discovery.md  2026-07-19-talk-single-exe-product-release.md
docs/superpowers/specs/: 2026-07-04-talk-openless-typeless-shell-design.md  2026-07-18-talk-independent-repository-design.md  2026-07-19-talk-hud-lifecycle-and-current-focus-insertion-design.md  2026-07-19-talk-runtime-credential-discovery-design.md  2026-07-19-talk-single-exe-product-release-design.md
examples/: asr-real-mic-prompts.json  desktop-external-asr-speculative-config.toml  desktop-http-live-config.toml  desktop-http-safe-config.toml  desktop-openai-compatible-live-config.toml  desktop-openai-compatible-safe-config.toml  desktop-qwen-audio-input-live-config.toml  desktop-streaming-service-speculative-config.toml  dev-config.toml  external-asr-jsonl-smoke.ps1  once-qwen-audio-input-safe-config.toml
scripts/: Get-TalkReleaseSummary.ps1  Install-TalkSherpaModel.ps1  Invoke-TalkAsrCorpusBenchmark.ps1  Invoke-TalkAsrCorpusRecorder.ps1  Invoke-TalkAsrDefaultModelWorkflow.ps1  Invoke-TalkAsrRealMicDefaultModelWorkflow.ps1  Invoke-TalkDesktopGlobalHotkeyProbe.ps1  Invoke-TalkDesktopLiveHotkeyProbe.ps1  Invoke-TalkDesktopLiveOperatorProbe.ps1  Invoke-TalkDesktopQwenGlobalHotkeyProbe.ps1  Invoke-TalkDesktopQwenGlobalHotkeySoak.ps1  Invoke-TalkDesktopQwenNativeMicProbe.ps1  Invoke-TalkDesktopReleaseSmoke.ps1  Invoke-TalkLiveAudioQwenProbe.ps1  Publish-TalkRelease.ps1  Select-TalkDefaultAsrModel.ps1  Set-TalkDefaultAsrModel.ps1  Start-TalkDesktop.ps1  Test-TalkProductRelease.ps1  Test-TalkReleaseManifest.ps1  Test-TalkReleaseSummary.ps1
scripts/tests/: Get-TalkReleaseSummary.Tests.ps1  GitHub-Actions.Tests.ps1  Install-TalkSherpaModel.Tests.ps1  Invoke-TalkAsrCorpusBenchmark.Tests.ps1  Invoke-TalkAsrCorpusRecorder.Tests.ps1  Invoke-TalkAsrDefaultModelWorkflow.Tests.ps1  Invoke-TalkAsrRealMicDefaultModelWorkflow.Tests.ps1  Invoke-TalkDesktopGlobalHotkeyProbe.Tests.ps1  Invoke-TalkDesktopLiveHotkeyProbe.Tests.ps1  Invoke-TalkDesktopLiveOperatorProbe.Tests.ps1  Invoke-TalkDesktopQwenGlobalHotkeyProbe.Tests.ps1  Invoke-TalkDesktopQwenGlobalHotkeySoak.Tests.ps1  Invoke-TalkDesktopQwenNativeMicProbe.Tests.ps1  Invoke-TalkDesktopReleaseSmoke.Tests.ps1  Invoke-TalkLiveAudioQwenProbe.Tests.ps1  ProductRelease.Tests.ps1  Publish-TalkRelease.Tests.ps1  Select-TalkDefaultAsrModel.Tests.ps1  Set-TalkDefaultAsrModel.Tests.ps1  Start-TalkDesktop.Tests.ps1  Test-TalkReleaseManifest.Tests.ps1  Test-TalkReleaseSummary.Tests.ps1
tools/asr-bench/: Cargo.toml
tools/asr-bench/src/: main.rs
tools/talk-local-asr-sherpa/: Cargo.toml
tools/talk-local-asr-sherpa/src/: main.rs
