[workspace]
members = [
  "crates/talk-core",
  "crates/talk-client",
  "crates/talk-insert",
  "crates/talk-audio",
  "crates/talk-hotkey",
  "crates/talk-daemon",
  "crates/talk-runtime",
  "crates/talk-desktop",
  "tools/asr-bench",
  "tools/talk-local-asr-sherpa"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
cpal = "0.17.3"
hound = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "time", "io-util", "net"] }
tokio-tungstenite = "0.27"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
