[package]
name = "talk-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "talk"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
talk-audio = { path = "../talk-audio" }
talk-client = { path = "../talk-client" }
talk-core = { path = "../talk-core" }
talk-hotkey = { path = "../talk-hotkey" }
talk-insert = { path = "../talk-insert" }
talk-runtime = { path = "../talk-runtime" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
