[package]
name = "talk-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "talk-desktop"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
talk-audio = { path = "../talk-audio" }
talk-client = { path = "../talk-client" }
talk-core = { path = "../talk-core" }
talk-hotkey = { path = "../talk-hotkey" }
talk-insert = { path = "../talk-insert" }
talk-runtime = { path = "../talk-runtime" }
tokio.workspace = true
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
uiautomation = { version = "0.25.0", default-features = false, features = ["input", "pattern"] }
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_UI_Accessibility",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }
