[package]
name = "talk-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
talk-audio = { path = "../talk-audio" }
talk-client = { path = "../talk-client" }
talk-core = { path = "../talk-core" }
talk-hotkey = { path = "../talk-hotkey" }
talk-insert = { path = "../talk-insert" }
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
futures-util.workspace = true
tokio-tungstenite.workspace = true
